{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 30,
  "lineage": "27a13163-aaf7-a57f-f79f-7625efce6e3e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-26T19:34:05.032-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class65-wh/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class65-wh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-08-26T19:34:05.169-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class65-wh/global/firewalls/icmp",
            "log_config": [],
            "name": "icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class65-wh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/firewalls/icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "pallow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-26T19:34:05.087-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class65-wh/global/firewalls/pallow-http",
            "log_config": [],
            "name": "pallow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class65-wh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/firewalls/pallow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-26T19:34:04.592-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class65-wh/global/firewalls/rdp",
            "log_config": [],
            "name": "rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class65-wh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/firewalls/rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "belgium-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "MULTI_IP_SUBNET",
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "WINDOWS"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20240612",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/europe-west1-b/disks/belgium-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2025-08-26T19:46:27.899-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/theowaf-class65-wh/zones/europe-west1-b/instances/belgium-vm",
            "instance_id": "5004177080930520940",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "mVlrP5P3KI0=",
            "metadata_startup_script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/inst [...]
            "name": "belgium-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.197.71",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
                "network_ip": "10.255.50.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/europe-west1/subnetworks/belgium",
                "subnetwork_project": "theowaf-class65-wh"
              }
            ],
            "project": "theowaf-class65-wh",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/europe-west1-b/instances/belgium-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon",
            "google_compute_subnetwork.belgium"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "brazil-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/southamerica-east1-a/disks/brazil-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2025-08-26T19:45:07.186-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/theowaf-class65-wh/zones/southamerica-east1-a/instances/brazil-vm",
            "instance_id": "768171117444845533",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "mVlrP5P3KI0=",
            "metadata_startup_script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/inst [...]
            "name": "brazil-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.39.130.128",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
                "network_ip": "10.255.35.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/southamerica-east1/subnetworks/brazil",
                "subnetwork_project": "theowaf-class65-wh"
              }
            ],
            "project": "theowaf-class65-wh",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/southamerica-east1-a/instances/brazil-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "southamerica-east1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon",
            "google_compute_subnetwork.brazil"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tokyo-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/asia-northeast1-a/disks/tokyo-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2025-08-26T19:45:06.899-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/theowaf-class65-wh/zones/asia-northeast1-a/instances/tokyo-vm",
            "instance_id": "7415404491505389533",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "mVlrP5P3KI0=",
            "metadata_startup_script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/inst [...]
            "name": "tokyo-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.84.179.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
                "network_ip": "10.255.25.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/asia-northeast1/subnetworks/tokyo",
                "subnetwork_project": "theowaf-class65-wh"
              }
            ],
            "project": "theowaf-class65-wh",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/zones/asia-northeast1-a/instances/tokyo-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-northeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon",
            "google_compute_subnetwork.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "armageddon",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/theowaf-class65-wh/global/networks/armageddon",
            "mtu": 1460,
            "name": "armageddon",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8456468696783908478",
            "numeric_id": "8456468696783908478",
            "project": "theowaf-class65-wh",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "belgium",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-26T18:02:45.373-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.255.50.1",
            "id": "projects/theowaf-class65-wh/regions/europe-west1/subnetworks/belgium",
            "ip_cidr_range": "10.255.50.0/24",
            "name": "belgium",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "theowaf-class65-wh",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/europe-west1/subnetworks/belgium",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3609343304313071578
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "brazil",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-26T18:02:47.327-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.255.35.1",
            "id": "projects/theowaf-class65-wh/regions/southamerica-east1/subnetworks/brazil",
            "ip_cidr_range": "10.255.35.0/24",
            "name": "brazil",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "theowaf-class65-wh",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/southamerica-east1/subnetworks/brazil",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4593488734674216920
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-26T17:57:15.429-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.255.25.1",
            "id": "projects/theowaf-class65-wh/regions/asia-northeast1/subnetworks/tokyo",
            "ip_cidr_range": "10.255.25.0/24",
            "name": "tokyo",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/global/networks/armageddon",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "theowaf-class65-wh",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class65-wh/regions/asia-northeast1/subnetworks/tokyo",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2696038446056859908
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.armageddon"
          ]
        }
      ]
    }
  ]
}